crates/carta/tests/snapshots/golden_writer__html4__table__table-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<table id="tbl" class="fancy" key="value">
<caption>Captioned and attributed</caption>
<thead>
<tr>
<th>h1</th>
<th>h2</th>
</tr>
</thead>
<tbody>
<tr class="odd">
<td id="cell-id">a</td>
<td>b</td>
</tr>
</tbody>
</table>
