crates/carta/tests/snapshots/golden_writer__html4__table__table-grid-widths.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<table style="width:19%;">
<colgroup>
<col width="5%" />
<col width="13%" />
</colgroup>
<thead>
<tr>
<th>a</th>
<th>b</th>
</tr>
</thead>
<tbody>
<tr>
<td>1</td>
<td>2</td>
</tr>
</tbody>
</table>
